# mem_prot_llps

./: .gitignore  01_data_loading_and_classification.ipynb  02_pllps_enriched_functional_groups.ipynb  02_string_interactions.ipynb  03_enrichment_analysis.ipynb  03_string_networks_pllps_enriched.ipynb  04_network_analysis.ipynb  04_visualize_pllps_networks.ipynb  05_functional_groups.ipynb  05_interactive_functional_group_networks.ipynb  06_pllps_scores_analysis.ipynb  06_visualization_summary.ipynb  07_figure_generation.ipynb  CLAUDE.md  DEPRECATED_NOTEBOOK_README.md  KEGG_PATHWAY_NOTEBOOK_SUMMARY.md  MIGRATION_GUIDE.md  NOTEBOOK_GUIDE.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_STATUS.md  REPOSITORY_ORGANIZATION_SUMMARY.md  TIDY_UP_SUMMARY.txt  UPDATED_WORKFLOW.md  app.py  example_string_usage.py  exploration_notebook.ipynb  generate_string_cache.py  interaction_analysis.py  kegg_pathway_analysis.ipynb  llps_functions.py  pllps_interaction_analysis.ipynb  pllps_interaction_simple.py  protein_pllps_lookup.ipynb  pyproject.toml  requirements.txt  shiny_app.py  string_functions.py  string_interaction_analysis.py
.desloppify/: query.json  state-python.json  state-python.json.bak
.github/: copilot-instructions.md
.venv-1/: pyvenv.cfg
dashboard/: app.py  sample_data.csv
data/: functional_classification_terms.yaml  sample_data.xlsx  subcell.txt  uniprot_location_sl_cache.csv  uniprot_tm_cache.csv
deprecated/: 01_data_loading_and_classification.ipynb  02_string_interactions.ipynb  03_enrichment_analysis.ipynb  04_network_analysis.ipynb  (+7 more)
(+116 files in other folders)
